# m87

./: Cargo.toml  LICENSE.md  README.md  deny.toml  install.sh
.cargo/: config.toml
.github/workflows/: cargo-deny.yml  e2e-tests.yml  release.yml  version-update.yml
.zed/: debug.json
m87-client/: Cargo.toml  Dockerfile  Dockerfile.e2e  Dockerfile.install-test  README.md  build.rs  install.sh
m87-client/examples/features/: README.md
m87-client/examples/features/auth/: README.md
m87-client/examples/features/cmd/: README.md
m87-client/examples/features/devices/: README.md
m87-client/examples/features/exec/: README.md
m87-client/examples/features/filesystem/: README.md
m87-client/examples/features/logs/: README.md
m87-client/examples/features/shell/: README.md
m87-client/examples/features/stats/: README.md
m87-client/src/: cli.rs  lib.rs  main.rs  org.rs  runtime.rs  server.rs
m87-client/src/agent/: daemon.rs  mod.rs
m87-client/src/auth/: device.rs  mod.rs  node.rs
m87-client/src/config/: mod.rs  profile.rs
m87-client/src/device/: agent.rs  control_tunnel.rs  daemon.rs  deploy.rs  deployment_manager.rs  docker.rs  events.rs  forward.rs  fs.rs  log_manager.rs  mod.rs  serial.rs  shell.rs  ssh.rs  status.rs  system_metrics.rs  tunnel.rs
m87-client/src/device/services/: docker.rs  podman.rs  service_info.rs  systemd.rs
m87-client/src/devices/: mod.rs
m87-client/src/mcp/: mod.rs
m87-client/src/node/: mod.rs
m87-client/src/rest/: container_logs.rs  container_terminal.rs  docker.rs  exec.rs  logs.rs  metrics.rs  mod.rs  port.rs  routes.rs  serial.rs  shared.rs  terminal.rs
m87-client/src/streams/: exec.rs  iroh_p2p.rs  mod.rs  quic.rs  router.rs  ssh.rs  stream_type.rs  terminal.rs
m87-client/src/streams/logs/: mod.rs
m87-client/src/tui/: cmd.rs  deploy.rs  devices.rs  events.rs  exec.rs  log.rs  logs.rs  metric.rs  metrics.rs  mod.rs  org.rs  shell.rs  user.rs
m87-client/src/update/: mod.rs
m87-client/src/util/: command.rs  device_cache.rs  format.rs  logging.rs  macchina.rs  mod.rs  network.rs  retry.rs  servers_parallel.rs  shell.rs  shutdown.rs  ssh.rs  subprocess.rs  system_info.rs  time.rs  unix.rs
m87-privileged/: Cargo.toml  Dockerfile
m87-privileged/src/: audit.rs  executor.rs  handler.rs  lib.rs  main.rs  policy.rs
m87-privileged/systemd/: m87-privileged.service
m87-privileged/tests/: protocol.rs
m87-server/: .env.example  Cargo.toml  Dockerfile  Dockerfile.e2e  README.md  docker-compose.yml
m87-server/src/: config.rs  db.rs  main.rs  response.rs
m87-server/src/api/: auth.rs  certificate.rs  deploy_spec.rs  device.rs  mod.rs  node.rs  org.rs  quic.rs  serve.rs  tunnel.rs
m87-server/src/auth/: access_control.rs  claims.rs  jwk.rs  mod.rs  tunnel_token.rs
m87-server/src/models/: api_key.rs  audit_logs.rs  deploy_spec.rs  device.rs  device_auth_request.rs  mod.rs  node.rs  node_auth_request.rs  roles.rs  ssh_key.rs  user.rs
m87-server/src/relay/: mod.rs  relay_state.rs
m87-server/src/util/: app_state.rs  logging.rs  mod.rs  pagination.rs  tcp_proxy.rs
m87-shared/: Cargo.toml  README.md
m87-shared/src/: auth.rs  config.rs  deploy_spec.rs  device.rs  heartbeat.rs  iroh_ticket.rs  lib.rs  metrics.rs  org.rs  pagination.rs  privileged.rs  roles.rs  services.rs  shell.rs  ssh.rs
src/: main.rs
src/agent/: daemon.rs  mod.rs  service.rs
src/backend/: mod.rs
src/config/: mod.rs
src/logs/: mod.rs
src/stack/: mod.rs
src/update/: mod.rs
tests/: Cargo.toml  docker-compose.e2e.yml
tests/.cargo/: config.toml
tests/e2e/: run-tests.sh
tests/src/: e2e.rs  lib.rs
tests/src/e2e_containers/: backward_compat.rs  containers.rs  deployment.rs  deployment_docker.rs  device_registration.rs  docker.rs  exec.rs  fs.rs  install.rs  iroh_p2p.rs  logs_status.rs  ls.rs  mod.rs  mongo_indexes.rs  setup.rs  tunnel.rs
tests/src/e2e_containers/fixtures/: agent.rs  device.rs  mod.rs
tests/src/e2e_containers/helpers/: exec.rs  mod.rs  parsing.rs  polling.rs  sni.rs
