[package]
name = "m87-privileged"
version = "0.0.0-dev0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "m87-privileged"
path = "src/main.rs"

[dependencies]
m87-shared = { path = "../m87-shared" }
tokio = { workspace = true, features = ["net", "process", "signal", "io-util", "fs", "time"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.30", default-features = false, features = ["user"] }
glob-match = "0.2"
tokio-util = { workspace = true }
