[package]
name = "m87-server"
version = "0.1.0"
edition = "2021"
authors = ["Phillip Thomas <phillip@make87.com>"]

[dependencies]
# Local workspace crates
m87-shared = { path = "../m87-shared" }

# Common workspace dependencies
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bson.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_core.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
chrono.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower-http.workspace = true
reqwest.workspace = true
headers.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
socket2.workspace = true
tokio-yamux.workspace = true

# Server-specific dependencies
mongodb = "3"
tokio-rustls-acme = "0.8.0"
rcgen = "0.14.5"
